--- a/UgSliderControlDemo/src/main.page
+++ b/UgSliderControlDemo/src/main.page
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:com.scade.sdk.data.binding="http://scade.com/sdk/data/binding" xmlns:com.scade.sdk.expr="com.scade.sdk.expr" xmlns:com.scade.sdk.lattice.navigation="http://scade.com/lattice/navigation" xmlns:com.scade.sdk.layout="http://scade.com/sdk/layout" xmlns:com.scade.sdk.view="http://scade.com/sdk/view/widgets" xmlns:com.scade.sdk.view.widgets="http://scade.com/sdk/view/widgets/style" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:svg="http://scade.com/svg/draw" xmlns:svg_1="http://scade.com/svg/constraints" xmlns:svg_2="http://scade.com/svg/style/color">
   <com.scade.sdk.view:Page name="main" drawing="/3">
-    <styles xsi:type="com.scade.sdk.view.widgets:PageStyle" platform="iPhone iOS7">
+    <styles xsi:type="com.scade.sdk.view.widgets:PageStyle">
       <screen device="iPhone 5/5S (4-inch)" svg="svg/screen/iphone_5.svg">
         <size width="320" height="568"/>
         <location x="16"/>
         <landscapeLocation x="-70" y="87"/>
       </screen>
     </styles>
-    <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle" platform="iPhone iOS7"/>
+    <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle"/>
     <layout xsi:type="com.scade.sdk.layout:GridLayout" rows="5"/>
     <minArea width="320" height="568"/>
     <maxArea width="320" height="568"/>
@@ -16,7 +16,7 @@
       <layoutData xsi:type="com.scade.sdk.layout:GridData" horizontalAlignment="CENTER" grabHorizontalSpace="true" heightConstraint="MATCH_PARENT"/>
       <size width="44" height="30"/>
       <location x="138"/>
-      <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle" platform="iPhone iOS7"/>
+      <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle"/>
       <layout xsi:type="com.scade.sdk.layout:GridLayout" columns="2" marginTop="5" marginBottom="5" marginLeft="5" marginRight="5"/>
       <minArea/>
       <maxArea width="-1" height="-1"/>
@@ -25,24 +25,24 @@
         <size width="18" height="20"/>
         <location x="5" y="5"/>
         <contentSize width="18" height="20"/>
-        <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle" platform="iPhone iOS7">
+        <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle">
           <minSize/>
           <maxSize width="-1" height="-1"/>
         </styles>
-        <styles xsi:type="com.scade.sdk.view.widgets:FontStyle" platform="iPhone iOS7" fontFamily="ArialMT" size="17"/>
-        <styles xsi:type="com.scade.sdk.view.widgets:TextStyle" platform="iPhone iOS7"/>
+        <styles xsi:type="com.scade.sdk.view.widgets:FontStyle" fontFamily="ArialMT" size="17"/>
+        <styles xsi:type="com.scade.sdk.view.widgets:TextStyle"/>
       </children>
       <children xsi:type="com.scade.sdk.view:Label" name="label1" drawing="/3/@drawableChilds.1/@drawableChilds.2" text="%" wrapText="true">
         <layoutData xsi:type="com.scade.sdk.layout:GridData" column="1" verticalAlignment="MIDDLE" grabVerticalSpace="true" heightConstraint="MATCH_PARENT"/>
         <size width="16" height="20"/>
         <location x="23" y="5"/>
         <contentSize width="16" height="20"/>
-        <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle" platform="iPhone iOS7">
+        <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle">
           <minSize/>
           <maxSize width="16" height="20"/>
         </styles>
-        <styles xsi:type="com.scade.sdk.view.widgets:FontStyle" platform="iPhone iOS7" fontFamily="ArialMT" size="17"/>
-        <styles xsi:type="com.scade.sdk.view.widgets:TextStyle" platform="iPhone iOS7"/>
+        <styles xsi:type="com.scade.sdk.view.widgets:FontStyle" fontFamily="ArialMT" size="17"/>
+        <styles xsi:type="com.scade.sdk.view.widgets:TextStyle"/>
       </children>
     </children>
     <children xsi:type="com.scade.sdk.view:ListView" name="verticalview1" drawing="/3/@drawableChilds.2">
@@ -50,7 +50,7 @@
       <size width="320" height="91"/>
       <location y="30"/>
       <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle"/>
-      <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle" platform="iPhone iOS7"/>
+      <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle"/>
       <layout xsi:type="com.scade.sdk.layout:GridLayout" marginTop="50" marginBottom="5" marginLeft="5" marginRight="5"/>
       <minArea/>
       <maxArea width="-1" height="-1"/>
@@ -58,7 +58,7 @@
         <layoutData xsi:type="com.scade.sdk.layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" grabVerticalSpace="true" widthConstraint="MATCH_PARENT"/>
         <size width="310" height="36"/>
         <location x="5" y="50"/>
-        <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle" platform="iPhone iOS7">
+        <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle">
           <minSize width="120" height="36"/>
           <maxSize width="-1" height="-1"/>
         </styles>
@@ -69,7 +69,7 @@
       <size width="320" height="91"/>
       <location y="121"/>
       <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle"/>
-      <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle" platform="iPhone iOS7"/>
+      <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle"/>
       <layout xsi:type="com.scade.sdk.layout:GridLayout" marginTop="50" marginBottom="5" marginLeft="5" marginRight="5"/>
       <minArea/>
       <maxArea width="-1" height="-1"/>
@@ -77,7 +77,7 @@
         <layoutData xsi:type="com.scade.sdk.layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT"/>
         <size width="310" height="36"/>
         <location x="5" y="50"/>
-        <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle" platform="iPhone iOS7">
+        <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle">
           <minSize width="120" height="36"/>
           <maxSize width="-1" height="-1"/>
         </styles>
@@ -88,7 +88,7 @@
       <size width="320" height="91"/>
       <location y="212"/>
       <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle"/>
-      <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle" platform="iPhone iOS7"/>
+      <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle"/>
       <layout xsi:type="com.scade.sdk.layout:GridLayout" marginTop="50" marginBottom="5" marginLeft="5" marginRight="5"/>
       <minArea/>
       <maxArea width="-1" height="-1"/>
@@ -96,7 +96,7 @@
         <layoutData xsi:type="com.scade.sdk.layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT"/>
         <size width="310" height="36"/>
         <location x="5" y="50"/>
-        <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle" platform="iPhone iOS7">
+        <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle">
           <minSize width="120" height="36"/>
           <maxSize width="-1" height="-1"/>
         </styles>
@@ -104,7 +104,7 @@
     </children>
   </com.scade.sdk.view:Page>
   <com.scade.sdk.data.binding:BindingModel>
-    <bindings src="/0" dst="/0/@children.0/@children.0" active="true">
+    <bindings src="/0" dst="/0/@children.0/@children.0">
       <root>
         <srcSelector feature="adapter">
           <next feature="percentage"/>
@@ -138,7 +138,7 @@
       <width value="320.0"/>
       <height value="568.0"/>
     </drawableChilds>
-    <drawableChilds xsi:type="svg:Group" attributes="{&quot;widget-id&quot;:&quot;horizontalview1&quot;}">
+    <drawableChilds xsi:type="svg:Group" attributes="">
       <matrix translateX="138.0"/>
       <drawableChilds xsi:type="svg:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}">
         <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.w">
@@ -163,7 +163,7 @@
         <width value="44.0"/>
         <height value="30.0"/>
       </drawableChilds>
-      <drawableChilds xsi:type="svg:Group" attributes="{&quot;widget-id&quot;:&quot;lbPercentage&quot;,&quot;scade:bind&quot;:&quot;text:percentage&quot;}">
+      <drawableChilds xsi:type="svg:Group" attributes="{&quot;scade:bind&quot;:&quot;text:percentage&quot;}">
         <matrix translateX="5.0" translateY="5.0"/>
         <drawableChilds xsi:type="svg:Text" attributes="{&quot;template-id&quot;:&quot;node-text&quot;}" fontSize="17" fontName="ArialMT" text="0" alignmentBaseline="central">
           <fill xsi:type="svg_2:RGBColor" r="0.27450982" g="0.27450982" b="0.27450982"/>
@@ -171,7 +171,7 @@
           <y value="10.0"/>
         </drawableChilds>
       </drawableChilds>
-      <drawableChilds xsi:type="svg:Group" attributes="{&quot;widget-id&quot;:&quot;label1&quot;}">
+      <drawableChilds xsi:type="svg:Group" attributes="">
         <matrix translateX="23.0" translateY="5.0"/>
         <drawableChilds xsi:type="svg:Text" attributes="{&quot;template-id&quot;:&quot;node-text&quot;}" fontSize="17" fontName="ArialMT" text="%" alignmentBaseline="central">
           <fill xsi:type="svg_2:RGBColor" r="0.27450982" g="0.27450982" b="0.27450982"/>
@@ -180,7 +180,7 @@
         </drawableChilds>
       </drawableChilds>
     </drawableChilds>
-    <drawableChilds xsi:type="svg:Group" attributes="{&quot;widget-id&quot;:&quot;verticalview1&quot;}">
+    <drawableChilds xsi:type="svg:Group" attributes="">
       <matrix translateY="30.0"/>
       <drawableChilds xsi:type="svg:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}">
         <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.w">
@@ -205,7 +205,7 @@
         <width value="320.0"/>
         <height value="91.0"/>
       </drawableChilds>
-      <drawableChilds xsi:type="svg:Group" attributes="{&quot;widget-id&quot;:&quot;sliderline1&quot;}">
+      <drawableChilds xsi:type="svg:Group" attributes="">
         <matrix translateX="5.0" translateY="50.0"/>
         <drawableChilds xsi:type="svg:Group">
           <matrix translateX="20.0"/>
@@ -255,6 +255,7 @@
           <drawableChilds xsi:type="svg:Rect" strokeWidth="0.5" id="svg_1" attributes="{&quot;template-id&quot;:&quot;node-bullet&quot;}">
             <fill xsi:type="svg_2:RGBColor" g="0.7490196"/>
             <stroke xsi:type="svg_2:RGBColor"/>
+            <matrix translateX="1.0"/>
             <width value="9.0"/>
             <height value="30.0"/>
             <rx/>
@@ -263,7 +264,7 @@
         </drawableChilds>
       </drawableChilds>
     </drawableChilds>
-    <drawableChilds xsi:type="svg:Group" attributes="{&quot;widget-id&quot;:&quot;verticalview2&quot;}">
+    <drawableChilds xsi:type="svg:Group" attributes="">
       <matrix translateY="121.0"/>
       <drawableChilds xsi:type="svg:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}">
         <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.w">
@@ -288,7 +289,7 @@
         <width value="320.0"/>
         <height value="91.0"/>
       </drawableChilds>
-      <drawableChilds xsi:type="svg:Group" attributes="{&quot;widget-id&quot;:&quot;sliderline2&quot;}">
+      <drawableChilds xsi:type="svg:Group" attributes="">
         <matrix translateX="5.0" translateY="50.0"/>
         <drawableChilds xsi:type="svg:Group">
           <matrix translateX="20.0"/>
@@ -338,6 +339,7 @@
           <drawableChilds xsi:type="svg:Ellipse" attributes="{&quot;template-id&quot;:&quot;node-bullet&quot;}">
             <fill xsi:type="svg_2:RGBColor" r="1.0" g="1.0" b="1.0"/>
             <stroke xsi:type="svg_2:RGBColor" r="0.85882354" g="0.85882354" b="0.85882354"/>
+            <matrix translateX="1.0"/>
             <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.h / 2">
               <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Ellipse/cy"/>
               <expression xsi:type="com.scade.sdk.expr:Division">
@@ -355,7 +357,7 @@
         </drawableChilds>
       </drawableChilds>
     </drawableChilds>
-    <drawableChilds xsi:type="svg:Group" attributes="{&quot;widget-id&quot;:&quot;verticalview3&quot;}">
+    <drawableChilds xsi:type="svg:Group" attributes="">
       <matrix translateY="212.0"/>
       <drawableChilds xsi:type="svg:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}">
         <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.w">
@@ -380,7 +382,7 @@
         <width value="320.0"/>
         <height value="91.0"/>
       </drawableChilds>
-      <drawableChilds xsi:type="svg:Group" attributes="{&quot;widget-id&quot;:&quot;sliderline3&quot;}">
+      <drawableChilds xsi:type="svg:Group" attributes="">
         <matrix translateX="5.0" translateY="50.0"/>
         <drawableChilds xsi:type="svg:Group">
           <matrix translateX="20.0"/>
@@ -427,8 +429,8 @@
             <rx/>
             <ry/>
           </drawableChilds>
-          <drawableChilds xsi:type="svg:Image" attributes="{&quot;template-id&quot;:&quot;node-bullet&quot;}" preserveAspectRatio="slice" xhref="/UgSliderControlDemo/res/automobile.svg">
-            <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.h / 2">
+          <drawableChilds xsi:type="svg:Image" attributes="{&quot;template-id&quot;:&quot;node-bullet&quot;}" preserveAspectRatio="slice" xhref="res/automobile.svg">
+            <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.h/2">
               <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Image/y"/>
               <expression xsi:type="com.scade.sdk.expr:Division">
                 <left xsi:type="com.scade.sdk.expr:Variable" name="size">
@@ -437,9 +439,10 @@
                 <right xsi:type="com.scade.sdk.expr:Number" value="2.0"/>
               </expression>
             </constraints>
+            <matrix translateX="1.0"/>
             <y value="18.0"/>
             <width value="30.0"/>
-            <height value="36.0"/>
+            <height value="60.0"/>
           </drawableChilds>
         </drawableChilds>
       </drawableChilds>
