--- a/UgMasterPageDemo/src/page2.page
+++ b/UgMasterPageDemo/src/page2.page
@@ -1,37 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:com.scade.sdk.data.binding="http://scade.com/sdk/data/binding" xmlns:com.scade.sdk.expr="com.scade.sdk.expr" xmlns:com.scade.sdk.lattice.navigation="http://scade.com/lattice/navigation" xmlns:com.scade.sdk.layout="http://scade.com/sdk/layout" xmlns:com.scade.sdk.view="http://scade.com/sdk/view/widgets" xmlns:com.scade.sdk.view.widgets="http://scade.com/sdk/view/widgets/style" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:svg="http://scade.com/svg/draw" xmlns:svg_1="http://scade.com/svg/constraints" xmlns:svg_2="http://scade.com/svg/style/color">
+<xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:com.scade.sdk.data.binding="http://scade.com/sdk/data/binding" xmlns:com.scade.sdk.expr="com.scade.sdk.expr" xmlns:com.scade.sdk.lattice.navigation="http://scade.com/lattice/navigation" xmlns:com.scade.sdk.layout="http://scade.com/sdk/layout" xmlns:com.scade.sdk.view="http://scade.com/sdk/view/widgets" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:svg="http://scade.com/svg/draw" xmlns:svg_1="http://scade.com/svg/constraints" xmlns:svg_2="http://scade.com/svg/style/color">
   <com.scade.sdk.view:Page name="page1" drawing="/3">
-    <styles xsi:type="com.scade.sdk.view.widgets:PageStyle">
-      <screen device="iPhone 6 (4.7-inch)" svg="svg/screen/iphone_6.svg">
-        <size width="375" height="667"/>
-        <location x="18" y="14"/>
-        <landscapeLocation x="-62" y="89"/>
-      </screen>
-    </styles>
-    <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle"/>
+    <size width="414" height="896"/>
     <layout xsi:type="com.scade.sdk.layout:GridLayout"/>
     <minArea width="375" height="667"/>
     <maxArea width="375" height="667"/>
-    <children xsi:type="com.scade.sdk.view:Label" name="label1" drawing="/3/@drawableChilds.1" text="Page II" wrapText="true">
-      <layoutData xsi:type="com.scade.sdk.layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" grabVerticalSpace="true"/>
-      <size width="70" height="26"/>
-      <location x="152" y="320"/>
-      <contentSize width="70" height="26"/>
-      <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle">
+    <children xsi:type="com.scade.sdk.view:Label" name="label1" drawing="/3/@children.1" text="Page II" wrapText="true">
+      <layoutData xsi:type="com.scade.sdk.layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" grabVerticalSpace="true">
         <minSize/>
-        <maxSize width="70" height="26"/>
-      </styles>
-      <styles xsi:type="com.scade.sdk.view.widgets:FontStyle" fontFamily="ArialMT" size="22">
-        <color Red="128" Blue="255"/>
-      </styles>
-      <styles xsi:type="com.scade.sdk.view.widgets:TextStyle"/>
+      </layoutData>
+      <size width="70" height="26"/>
+      <location x="172" y="435"/>
+      <contentSize width="70" height="26"/>
     </children>
-    <adapterClass href="page1.page.swift#//Page1PageAdapter"/>
+    <adapterClass href="http://scade.com/UgMasterPageDemo#//Page1PageAdapter"/>
   </com.scade.sdk.view:Page>
   <com.scade.sdk.data.binding:BindingModel/>
   <com.scade.sdk.lattice.navigation:Navigation page="/0"/>
   <svg:Box>
-    <drawableChilds xsi:type="svg:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}">
+    <children xsi:type="svg:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}">
       <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.h">
         <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Box/height"/>
         <expression xsi:type="com.scade.sdk.expr:Variable" name="size">
@@ -44,23 +31,23 @@
           <path>w</path>
         </expression>
       </constraints>
-      <drawableChilds xsi:type="svg:Rect">
+      <children xsi:type="svg:Rect">
         <fill xsi:type="svg_2:RGBColor" r="0.972549" g="0.972549" b="0.972549"/>
         <width value="100.0" measurement="PERCENTAGE"/>
         <height value="100.0" measurement="PERCENTAGE"/>
         <rx/>
         <ry/>
-      </drawableChilds>
-      <width value="375.0"/>
-      <height value="667.0"/>
-    </drawableChilds>
-    <drawableChilds xsi:type="svg:Group">
-      <matrix translateX="152.0" translateY="320.0"/>
-      <drawableChilds xsi:type="svg:Text" attributes="{&quot;template-id&quot;:&quot;node-text&quot;}" fontSize="22" fontName="ArialMT" text="Page II" alignmentBaseline="central">
+      </children>
+      <width value="414.0"/>
+      <height value="896.0"/>
+    </children>
+    <children xsi:type="svg:Group">
+      <children xsi:type="svg:Text" attributes="{&quot;template-id&quot;:&quot;node-text&quot;}" fontSize="22" fontName="ArialMT" text="Page II" alignmentBaseline="central">
         <fill xsi:type="svg_2:RGBColor" r="0.5019608" b="1.0"/>
         <x/>
         <y value="13.0"/>
-      </drawableChilds>
-    </drawableChilds>
+      </children>
+      <matrix translateX="172.0" translateY="435.0"/>
+    </children>
   </svg:Box>
 </xmi:XMI>
